# deadbeef_GSFdecoder

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: api.h  consts.h  metadata.h  play.h  plugin.h  psflib.h  rom.h  sound.h  types.h
src/: api.cpp  load.c  metadata.cpp  play.cpp  plugin.cpp  psflib.cpp  rom.cpp  sound.cpp
